syntax = "proto3";

option csharp_namespace = "ZodiacService.Protos";

package zodiac;

service ZodiacSignTeller {
	rpc SayZodiacSign (DateRequest) returns (ZodiacSign);
}

message DateRequest {
	string date = 1;
}

message ZodiacSign {
	string zodiac_sign = 1;
}